# TeamIndex

./: .gitignore  create_figures.py
benchmark/SDSS/: convert_to_parquet.py  create_links.sh  start_downloads.sh
code/: CMakeLists.txt  README.md  pyproject.toml
code/cmake/modules/: Findzstd.cmake
code/cpp/include/create/: create.hpp
code/python/TeamIndex/: evaluation.py  standalone_cli.py
minimal_example/: run_example.py  run_example2.py  run_my_example.py
